[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrad2"
description = "Python RADIUS toolkit (client, server, RadSec, RADIUS/1.1)"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Nicholas Amorim", email = "nicholas@santos.ee" },
]
keywords = ["radius", "radsec", "authentication", "aaa"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dynamic = ["version"]
dependencies = [
    "loguru>=0.7.3",
]

[project.urls]
Repository = "https://github.com/nicholasamorim/pyrad2"
Documentation = "https://nicholasamorim.github.io/pyrad2/"
Issues = "https://github.com/nicholasamorim/pyrad2/issues"
Changelog = "https://github.com/nicholasamorim/pyrad2/releases"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.1.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.3",
    "types-setuptools>=82.0.0.20260508",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[tool.hatch.version]
path = "pyrad2/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pyrad2"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyrad2",
    "/tests",
    "/LICENSE.txt",
    "/README.md",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
# ``asyncio_mode = "auto"`` lets bare ``async def test_*`` functions run as
# coroutines without a per-test ``@pytest.mark.asyncio`` decorator.
asyncio_mode = "auto"
testpaths = ["tests"]
