[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrad2"
description = "Python RADIUS toolkit (client, server, RadSec, RADIUS/1.1)"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Nicholas Amorim", email = "nicholas@santos.ee" },
]
keywords = ["radius", "radsec", "authentication", "aaa"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dynamic = ["version"]
dependencies = [
    "loguru>=0.7.3",
]

[project.optional-dependencies]
# MS-CHAPv2 / EAP-MSCHAPv2 need exactly two primitives:
#  - MD4: bundled in ``pyrad2/_md4.py`` (textbook RFC 1320, ~80 lines).
#    No external dependency.
#  - DES (single 8-byte block, three independent invocations per
#    response): sourced from ``cryptography``. Pure-Python DES is
#    enough subtle bit-twiddling that we prefer a FIPS-validated impl
#    over bundling our own.
# Install via:
#     pip install pyrad2[mschap]
mschap = ["cryptography>=43.0"]

[project.urls]
Repository = "https://github.com/pyradius/pyrad2"
Documentation = "https://pyradius.github.io/pyrad2/"
Issues = "https://github.com/pyradius/pyrad2/issues"
Changelog = "https://github.com/pyradius/pyrad2/releases"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.15",
    # Pulled in so the MS-CHAPv2 tests under tests/test_mschap.py can
    # exercise the DES path locally; production users install the same
    # dep via the ``[mschap]`` extra.
    "cryptography>=43.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[tool.hatch.version]
path = "pyrad2/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pyrad2"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyrad2",
    "/tests",
    "/LICENSE.txt",
    "/README.md",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
# ``asyncio_mode = "auto"`` lets bare ``async def test_*`` functions run as
# coroutines without a per-test ``@pytest.mark.asyncio`` decorator.
asyncio_mode = "auto"
testpaths = ["tests"]
